security: restrict CORS to explicit origins (no wildcard), add security response headers (X-Frame-Options, X-Content-Type, XSS, HSTS, Referrer-Policy)